<resources>
    <string name="app_name">Nexus-Promo</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="about_us_allright">Todos los derechos reservados</string>
    <string name="about_us_copy">Copyright © 2018 Daym3l.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telf">(+53) 7 699 75 98</string>
    <string name="telf1">(+53) 5 387 99 88</string>
    <string name="telf2">(+53) 5 387 83 02</string>
    <string name="sitio">http://Mi.Sitio.com</string>
    <string name="correo">estudiofotograficoluna@nauta.cu</string>
    <string name="facebook">Estudio Fotográfico Luna</string>
    <string name="face">Facebook</string>
    <string name="dir">Acosta #54 / 1ra y 2da. Vibora, La Habana, Cuba</string>
    <string name="web">Web</string>
    <string name="correot">Correo</string>
    <string name="direcci_n">Dirección</string>
    <string name="telefono">Teléfonos</string>
    <string name="quienes_somos">Quienes somos.</string>
    <string name="acerca_de">Acerca de.</string>
    <string name="desarrollada_por">Desarrollada por:</string>
    <string name="desarrollada_correo">softnexus537@gmail.com</string>
    <string name="fot">VER FOTOS</string>
    <string name="estamos_aqu">Estamos aquí</string>

</resources>
