<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="daym3l.photobook.com.photobook.about.AboutUsActivity">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_fotologo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorPrimary"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/png_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:divider="@android:color/darker_gray"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/ll_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="12dp">

                    <LinearLayout
                        android:id="@+id/ll_telf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp">

                        <ImageView
                            android:id="@+id/iv_call"
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="1dp"
                            app:srcCompat="@drawable/ic_call" />

                        <TextView
                            android:id="@+id/tv_telf"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/telefono"
                            android:textColor="@color/Sectext"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_ntelf"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/telf"
                        android:textColor="@color/text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/telf1"
                        android:textColor="@color/text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/telf2"
                        android:textColor="@color/text"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="12dp">

                    <LinearLayout
                        android:id="@+id/ll_dir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp">

                        <ImageView
                            android:id="@+id/iv_dir"
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="1dp"
                            app:srcCompat="@drawable/ic_place" />

                        <TextView
                            android:id="@+id/tv_dir"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/direcci_n"
                            android:textColor="@color/Sectext"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_tdir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/dir"
                        android:textColor="@color/text"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_correo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="12dp">

                    <LinearLayout
                        android:id="@+id/ll_mail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp">

                        <ImageView
                            android:id="@+id/iv_mail"
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="1dp"
                            app:srcCompat="@drawable/ic_mail" />

                        <TextView
                            android:id="@+id/tv_mail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/correot"
                            android:textColor="@color/Sectext"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_tcorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/correo"
                        android:textColor="@color/text"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="12dp">

                    <LinearLayout
                        android:id="@+id/ll_web"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp">

                        <ImageView
                            android:id="@+id/iv_web"
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="1dp"
                            app:srcCompat="@drawable/ic_facebok" />

                        <TextView
                            android:id="@+id/tv_web"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/face"
                            android:textColor="@color/Sectext"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_sweb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/facebook"
                        android:textColor="@color/text"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_qr"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/qr" />

            <TextView
                android:id="@+id/tv_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/desarrollada_por"
                android:textAlignment="center"
                android:textColor="@color/Sectext"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/about_us_copy"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_toLeftOf="@+id/roundedImageView"
                        android:layout_toStartOf="@+id/roundedImageView"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Desarrollador"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_toLeftOf="@+id/roundedImageView"
                        android:layout_toStartOf="@+id/roundedImageView"
                        android:fontFamily="sans-serif-condensed"
                        android:text="daymel537@gmail.com"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <daym3l.photobook.com.photobook.utils.RoundedImageView
                        android:id="@+id/roundedImageView"
                        android:layout_width="50dp"

                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/avatar" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@+id/roundedImageView2"
                        android:layout_toRightOf="@+id/roundedImageView2"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Esp. Marketing"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/roundedImageView2"
                        android:layout_toRightOf="@+id/roundedImageView2"
                        android:fontFamily="sans-serif-condensed"
                        android:text="arcecarlos1@gmail.com"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <daym3l.photobook.com.photobook.utils.RoundedImageView
                        android:id="@+id/roundedImageView2"
                        android:layout_width="50dp"

                        android:layout_height="50dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/avatar" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
